--- a/src/index.html
+++ b/src/index.html
@@ -22,25 +22,24 @@
     <!-- Intercom -->
     <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/za787poa';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
     <!-- End Intercom -->
-    <!--&lt;!&ndash; Google Tag Manager &ndash;&gt;-->
-    <!--<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-KTK926"-->
-                      <!--height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>-->
-    <!--<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':-->
-      <!--new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],-->
-                                                <!--j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=-->
-      <!--'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);-->
-    <!--})(window,document,'script','dataLayer','GTM-KTK926');</script>-->
-    <!--&lt;!&ndash; End Google Tag Manager &ndash;&gt;-->
-    <!--&lt;!&ndash; Localize &ndash;&gt;-->
-    <!--<script src="https://global.localizecdn.com/localize.js"></script>-->
-    <!--<script>!function(a){if(!a.Localize){a.Localize={};for(var e=["translate","untranslate","phrase","initialize","translatePage","setLanguage","getLanguage","detectLanguage","getAvailableLanguages","untranslatePage","bootstrap","prefetch","on","off"],t=0;t<e.length;t++)a.Localize[e[t]]=function(){}}}(window);</script>-->
-    <!--<script>-->
-      <!--Localize.initialize({-->
-        <!--key: 'zyjZ2H97VXDaE',-->
-        <!--rememberLanguage: true,-->
-        <!--blockedClasses: ['intercom-container', 'no-localize']-->
-      <!--});-->
-    <!--</script>-->
-    <!--&lt;!&ndash; End Localize &ndash;&gt;-->
+    <!-- Google Tag Manager -->
+    <!-- <noscript>
+      <iframe src="//www.googletagmanager.com/ns.html?id=GTM-KTK926" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KTK926');</script> -->
+    <!-- End Google Tag Manager -->
+    <!-- Localize -->
+    <script src="https://global.localizecdn.com/localize.js"></script>
+    <script>!function(a){if(!a.Localize){a.Localize={};for(var e=["translate","untranslate","phrase","initialize","translatePage","setLanguage","getLanguage","detectLanguage","getAvailableLanguages","untranslatePage","bootstrap","prefetch","on","off"],t=0;t<e.length;t++)a.Localize[e[t]]=function(){}}}(window);</script>
+    <script>
+      Localize.initialize({
+        key: 'opfnh8MDFMa8y',
+        rememberLanguage: true,
+        blockedClasses: ['intercom-container', 'no-localize']
+      });
+    </script>
+    <!-- End Localize -->
   </body>
 </html>
