--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=768" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
-    <link rel="stylesheet"
-          href="//fonts.googleapis.com/css?family=RobotoDraft:100,100italic,300,300italic,400,500,700,900,400italic">
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i" rel="stylesheet">
   </head>
   <body>
     <div id="root" style="height: 100%">
